--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "face-api.js": "^0.22.2",
     "firebase": "^11.4.0",
     "firebase-admin": "^13.2.0",
     "lucide-react": "^0.482.0",
